--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.1.5",
     "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.2",
     "sass": "^1.75.0",
     "scss": "^0.2.4"
   },
